# axcend_focus

./: .gitignore  README.md  axcend_focus.code-workspace
axcend_focus_actions/: CMakeLists.txt  package.xml
axcend_focus_client_library_cpp/: CMakeLists.txt  CMakeSettings.json  package.xml
axcend_focus_client_library_cpp/include/axcend_focus_client_library_cpp/: axcend_focus_client.h  visibility_control.h
axcend_focus_client_library_cpp/src/: axcend_focus_client.cpp  main.cpp
axcend_focus_client_library_cpp/test/: axcend_focus_client_test.cpp
axcend_focus_custom_interfaces/: CHANGELOG.rst  package.xml
axcend_focus_custom_interfaces/srv/: CartridgeMemoryReadWrite.srv
axcend_focus_device_config/: CHANGELOG.rst  package.xml  setup.py
axcend_focus_front_panel_button/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
axcend_focus_front_panel_button/axcend_focus_front_panel_button/: front_panel_button_controller.py
axcend_focus_launch/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
axcend_focus_launch/launch/: application_launch.py  application_launch.service
axcend_focus_legacy_compatibility_layer/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
axcend_focus_legacy_compatibility_layer/axcend_focus_legacy_compatibility_layer/: legacy_compatibility_interface.py  legacy_compatibility_interface_node.py
axcend_focus_legacy_compatibility_layer/launch/: test.launch.py
axcend_focus_legacy_compatibility_layer/test/: test_legacy_compatability_interface.py
axcend_focus_msgs/: CHANGELOG.rst  package.xml
axcend_focus_operation/: CHANGELOG.rst  package.xml  setup.py
axcend_focus_ros2_firmware_bridge/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
axcend_focus_ros2_firmware_bridge/axcend_focus_ros2_firmware_bridge/: firmware_bridge.py  firmware_manager.py  packet_definitions.py
axcend_focus_ros2_firmware_bridge/axcend_focus_ros2_firmware_bridge.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
axcend_focus_ros2_firmware_bridge/test/: test_firmware.py  test_firmware.txt  test_firmware_bridge.py  test_firmware_manager.py  test_packet_definitions.py
axcend_focus_ros2_firmware_bridge_cpp/: CMakeLists.txt  package.xml
axcend_focus_ros2_firmware_bridge_cpp/src/: firmware_bridge.cpp
axcend_focus_test_utils_package/: CHANGELOG.rst  package.xml  setup.cfg  setup.py
axcend_focus_test_utils_package/axcend_focus_test_utils_package/: conftest.py
